--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,2 +1,12 @@
+^CRAN-RELEASE$
 ^.*\.Rproj$
 ^\.Rproj\.user$
+^README\.Rmd$
+^README-.*\.png$
+^CRANlogs$
+^_pkgdown\.yml$
+^docs$
+^pkgdown$
+^\.github$
+^.DS_Store$
+^revdep$
